--- a/src/tello/setup.cfg
+++ b/src/tello/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/tello
+script_dir=$base/lib/tello
 [install]
-install-scripts=$base/lib/tello
+install_scripts=$base/lib/tello
